DEV - Ajoute la page home index

--- a/Trululu.web/Views/Home/Index.cshtml
+++ b/Trululu.web/Views/Home/Index.cshtml
@@ -1,8 +1,14 @@
-﻿<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-    <title></title>
-</head>
-<body>
-    <h1>Trululu</h1>
-</body>
-</html>
+﻿@section title {
+    Accueil
+}
+
+
+@section styles {
+    <link rel="stylesheet" href="~/css/home.css" />
+}
+
+<div class="container">
+    <div class="row">
+       
+    </div>
+</div>
