--- a/Trululu.web/Views/Shared/_Layout.cshtml
+++ b/Trululu.web/Views/Shared/_Layout.cshtml
@@ -25,14 +25,14 @@
                                 Trululu Corp
                             </h1>
                         </a>
-                        <a asp-controller="Home" asp-action="Index">Accueil</a>                  
+                        <a asp-controller="Home" asp-action="Index">Accueil</a>   
+                        <a asp-controller="Home" asp-action="Contact">Contact</a>
                     </div>
                 </div>
 
-                <div class="nav-left">
-                    <a asp-controller="Contact" asp-action="Index">Contact</a>
-                    <a asp-controller="Account" asp-action="Index">S'inscrire</a>
-                    <a asp-controller="Connexion" asp-action="Index">Se connecter</a>
+                <div class="nav-left">                
+                    <a asp-controller="Security" asp-action="Inscription">S'inscrire</a>
+                    <a asp-controller="Security" asp-action="Connexion">Se connecter</a>
                 </div>
             </div>
         </div>
