DEV - Passage à l'Anglais total

--- a/Trululu.web/Views/Shared/_Layout.cshtml
+++ b/Trululu.web/Views/Shared/_Layout.cshtml
@@ -25,14 +25,15 @@
                                 Trululu Corp
                             </h1>
                         </a>
-                        <a asp-controller="Home" asp-action="Index">Accueil</a>   
-                        <a asp-controller="Home" asp-action="Contact">Contact</a>
+                        <a asp-controller="Home" asp-action="Index">Accueil</a>
+                        <a asp-controller="Home" asp-action="Feedback">Contact</a>
+                        <a asp-controller="Casting" asp-action="Index">Casting</a>
                     </div>
                 </div>
 
                 <div class="nav-left">                
-                    <a asp-controller="Security" asp-action="Inscription">S'inscrire</a>
-                    <a asp-controller="Security" asp-action="Connexion">Se connecter</a>
+                    <a asp-controller="Security" asp-action="SignUp">S'inscrire</a>
+                    <a asp-controller="Security" asp-action="SignIn">Se connecter</a>
                 </div>
             </div>
         </div>
