--- a/Trululu.web/Views/Casting/AddCasting.cshtml
+++ b/Trululu.web/Views/Casting/AddCasting.cshtml
@@ -1,8 +1,7 @@
 ﻿@model Trululu.web.ViewModels.CastingViewModel
 
 @section title {
-    Liste Casting
+    Ajouter un casting
 }
-<h1>Index Casting</h1>
 
-
+<h1>Index</h1>
