--- a/Trululu.web/Views/Security/SignIn.cshtml
+++ b/Trululu.web/Views/Security/SignIn.cshtml
@@ -1,4 +1,4 @@
-﻿@model Trululu.web.ViewModels.ConnexionViewModel
+﻿@model Trululu.web.ViewModels.SignInViewModel
 
 @section title {
     Connexion
@@ -11,14 +11,14 @@
         <form asp-action="Index">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>           
             <div class="form-group">
-                <label asp-for="Email" class="control-label"></label>
-                <input asp-for="Email" class="form-control" />
-                <span asp-validation-for="Email" class="text-danger"></span>
+                <label asp-for="Mail" class="control-label"></label>
+                <input asp-for="Mail" class="form-control" />
+                <span asp-validation-for="Mail" class="text-danger"></span>
             </div>          
             <div class="form-group">
-                <label asp-for="MotDePasse" class="control-label"></label>
-                <input asp-for="MotDePasse" class="form-control" />
-                <span asp-validation-for="MotDePasse" class="text-danger"></span>
+                <label asp-for="Password" class="control-label"></label>
+                <input asp-for="Password" class="form-control" />
+                <span asp-validation-for="Password" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Se connecter" class="btn btn-primary" />
