DEV - Modifie l'affichage du site

--- a/Trululu.web/Views/Security/SignIn.cshtml
+++ b/Trululu.web/Views/Security/SignIn.cshtml
@@ -4,25 +4,30 @@
     Connexion
 }
 
-<h1>Connexion</h1>
+@section styles {
+    <link rel="stylesheet" href="~/styles/security.css"/>
+}
 
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Index">
+<main>
+    <div class="box-form">
+        <h2>Connexion</h2>
+        <form asp-action="SignIn">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>           
-            <div class="form-group">
-                <label asp-for="Mail" class="control-label"></label>
-                <input asp-for="Mail" class="form-control" />
-                <span asp-validation-for="Mail" class="text-danger"></span>
-            </div>          
-            <div class="form-group">
-                <label asp-for="Password" class="control-label"></label>
-                <input asp-for="Password" class="form-control" />
-                <span asp-validation-for="Password" class="text-danger"></span>
+            <div class="box-icon-input box-top">
+                <div class="icon-input"><i class="far fa-user"></i></div>
+                <input asp-for="Mail" placeholder="Adresse Email"/>
             </div>
-            <div class="form-group">
+            <span asp-validation-for="Mail" class="text-danger"></span>
+            <div class="box-icon-input">
+                <div class="icon-input"><i class="fas fa-lock"></i></div>
+                <input asp-for="Password" placeholder="Mot de passe"/>
+            </div>
+                <span asp-validation-for="Password" class="text-danger"></span>
+            <div class="form-submit">
+                <a href="#" class="forgot-password">Mot de passe oublié ?</a>
                 <input type="submit" value="Se connecter" class="btn btn-primary" />
             </div>
         </form>
+        <p class="small">Vous n'avez pas de compte, <a class="link-in-text" asp-controller="Security" asp-action="SignUp">inscivez-vous ici !</a></p>
     </div>
-</div>
+</main>
