--- a/Trululu.web/Views/Security/SignUp.cshtml
+++ b/Trululu.web/Views/Security/SignUp.cshtml
@@ -4,50 +4,82 @@
     Inscription
 }
 
-<h1>Inscription</h1>
+@section styles {
+    <link rel="stylesheet" href="~/styles/security.css"/>
+}
 
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Index">
+<main>
+    <div class="box-form box-large">
+        <h2>Inscription</h2>
+        <form asp-action="SignUp">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Name" class="control-label"></label>
-                <input asp-for="Name" class="form-control" />
-                <span asp-validation-for="Name" class="text-danger"></span>
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-md-3">
+                        <div class="box-icon-input box-top">
+                            <div class="icon-input"><i class="fas fa-id-card"></i></div>
+                            <input asp-for="Name" placeholder="Nom"/>
+                            <span asp-validation-for="Name" class="text-danger"></span>
+                        </div>
+                    </div>
+
+                    <div class="col-md-3">
+                        <div class="box-icon-input box-top">
+                            <div class="icon-input"><i class="fas fa-id-card"></i></div>
+                            <input asp-for="FisrtName" placeholder="Prénom"/>
+                            <span asp-validation-for="FisrtName" class="text-danger"></span>
+                        </div>
+                    </div>
+
+                    <div class="col-md-6">
+                        <div class="box-icon-input box-top">
+                            <div class="icon-input"><i class="fas fa-id-card"></i></div>
+                            <input asp-for="Mail" placeholder="Adresse email"/>
+                            <span asp-validation-for="Mail" class="text-danger"></span>
+                        </div>
+                    </div>
+
             </div>
-            <div class="form-group">
-                <label asp-for="FisrtName" class="control-label"></label>
-                <input asp-for="FisrtName" class="form-control" />
-                <span asp-validation-for="FisrtName" class="text-danger"></span>
+            <div class="row">
+                    <div class="col-md-5">
+                        <div class="box-icon-input box-top">
+                            <div class="icon-input"><i class="fas fa-id-card"></i></div>
+                            <input asp-for="Address" placeholder="Adresse postale"/>
+                            <span asp-validation-for="Address" class="text-danger"></span>
+                        </div>
+                    </div>
+
+                    <div class="col-md-3">
+                        <div class="box-icon-input box-top">
+                            <div class="icon-input"><i class="fas fa-id-card"></i></div>
+                            <input asp-for="Phone" placeholder="Téléphone"/>
+                            <span asp-validation-for="Phone" class="text-danger"></span>
+                        </div>
+                    </div>
+
+                    <div class="col-md-4">
+                        <div class="box-icon-input box-top">
+                            <div class="icon-input"><i class="fas fa-id-card"></i></div>
+                            <input asp-for="DateOfBirth" placeholder="Date de naissance"/>
+                            <span asp-validation-for="DateOfBirth" class="text-danger"></span>
+                        </div>
+                    </div>
             </div>
-            <div class="form-group">
-                <label asp-for="Mail" class="control-label"></label>
-                <input asp-for="Mail" class="form-control" />
-                <span asp-validation-for="Mail" class="text-danger"></span>
+            <div class="row">
+                    <div class="col-md-12">
+                        <div class="box-icon-input box-top">
+                            <div class="icon-input"><i class="fas fa-lock"></i></div>
+                            <input asp-for="Password" placeholder="Mot de passe"/>
+                            <span asp-validation-for="Password" class="text-danger"></span>
+                        </div>
+                    </div>
+                </div>
             </div>
-            <div class="form-group">
-                <label asp-for="Phone" class="control-label"></label>
-                <input asp-for="Phone" class="form-control" />
-                <span asp-validation-for="Phone" class="text-danger"></span>
+
+            <div class="form-submit align-center">
+                <input type="submit" value="Créer votre compte" class="btn btn-primary"/>
             </div>
-            <div class="form-group">
-                <label asp-for="DateOfBirth" class="control-label"></label>
-                <input asp-for="DateOfBirth" class="form-control" />
-                <span asp-validation-for="DateOfBirth" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Adress" class="control-label"></label>
-                <input asp-for="Adress" class="form-control" />
-                <span asp-validation-for="Adress" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Password" class="control-label"></label>
-                <input asp-for="Password" class="form-control" />
-                <span asp-validation-for="Password" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Créer votre compte" class="btn btn-primary" />
-            </div>
+            <p class="small">Vous possédez déjà un compte ? <a class="link-in-text" asp-controller="Security" asp-action="SignIn">Connectez-vous ici !</a></p>
         </form>
     </div>
-</div>
+</main>
