--- a/Trululu.web/Views/Shared/_Layout.cshtml
+++ b/Trululu.web/Views/Shared/_Layout.cshtml
@@ -32,7 +32,7 @@
                 <div class="nav-left">
                     <a asp-controller="Contact" asp-action="Index">Contact</a>
                     <a asp-controller="Account" asp-action="Index">S'inscrire</a>
-                    <a asp-controller="Connexion" asp-action="Index">Se connecter</a>
+                    <a asp-controller="Security" asp-action="Index">Se connecter</a>
                 </div>
             </div>
         </div>
