--- a/Trululu.web/Views/Inscription/Index.cshtml
+++ b/Trululu.web/Views/Inscription/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model Trululu.web.ViewModels.AccountViewModel
+﻿@model Trululu.web.ViewModels.SignUpViewModel
 
 @section title {
     Inscription
@@ -11,24 +11,24 @@
             <form asp-action="Index">
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                 <div class="form-group">
-                    <label asp-for="Nom" class="control-label"></label>
-                    <input asp-for="Nom" class="form-control" />
-                    <span asp-validation-for="Nom" class="text-danger"></span>
+                    <label asp-for="Name" class="control-label"></label>
+                    <input asp-for="Name" class="form-control" />
+                    <span asp-validation-for="Name" class="text-danger"></span>
                 </div>
                 <div class="form-group">
-                    <label asp-for="Prenom" class="control-label"></label>
-                    <input asp-for="Prenom" class="form-control" />
-                    <span asp-validation-for="Prenom" class="text-danger"></span>
+                    <label asp-for="FisrtName" class="control-label"></label>
+                    <input asp-for="FisrtName" class="form-control" />
+                    <span asp-validation-for="FisrtName" class="text-danger"></span>
                 </div>
                 <div class="form-group">
-                    <label asp-for="Email" class="control-label"></label>
-                    <input asp-for="Email" class="form-control" />
-                    <span asp-validation-for="Email" class="text-danger"></span>
+                    <label asp-for="Mail" class="control-label"></label>
+                    <input asp-for="Mail" class="form-control" />
+                    <span asp-validation-for="Mail" class="text-danger"></span>
                 </div>
                 <div class="form-group">
-                    <label asp-for="Telephone" class="control-label"></label>
-                    <input asp-for="Telephone" class="form-control" />
-                    <span asp-validation-for="Telephone" class="text-danger"></span>
+                    <label asp-for="Phone" class="control-label"></label>
+                    <input asp-for="Phone" class="form-control" />
+                    <span asp-validation-for="Phone" class="text-danger"></span>
                 </div>
                 <div class="form-group">
                     <input type="submit" value="Créer votre compte" class="btn btn-primary" />
