--- a/Trululu.web/Views/Casting/Index.cshtml
+++ b/Trululu.web/Views/Casting/Index.cshtml
@@ -1,8 +1,27 @@
-﻿@model Trululu.web.ViewModels.CastingViewModel
+﻿@model IEnumerable<Trululu.web.Entities.Casting>
 
 @section title {
     Liste Casting
 }
-<h1>Index Casting</h1>
+
+<main>
+    <div class="container">
+        <h2 class="title-centered">Liste des castings</h2>
+        <div class="castings">
+            @foreach (var casting in @Model)
+            {
+                <div class="casting">
+                    <h4>@casting.Wording</h4>
+                    <p>@casting.DescriptionPost</p>
+                    <div class="casting-links">
+                        <a href="#" class="link-del"><i class="fas fa-trash"></i></a>
+                        <a href="#" class="link-edit"><i class="fas fa-pen"></i></a>
+                        <a href="#" class="link-see"><i class="far fa-eye"></i></a>
+                    </div>
+                </div>
+            }
+        </div>
+    </div>
+</main>
 
 
