DEV - ajout de la page de contact

--- a/Trululu.web/Views/Home/Index.cshtml
+++ b/Trululu.web/Views/Home/Index.cshtml
@@ -9,7 +9,7 @@
         <div class="container">
             <div class="flex-container">
                 <div class="logo">
-                    <img src="~/media/logo.svg"/>
+                    <img src="~/media/logo.svg" />
                 </div>
                 <div class="present">
                     <h2>Trululu</h2>
@@ -41,7 +41,7 @@
                 </div>
                 <p>entreprises</p>
             </div>
-        </div> 
+        </div>
     </div>
 </div>
 
@@ -50,13 +50,13 @@
     <div class="flex-stats">
         <div class="box">
             <div class="name-box">
-                TEST1
+                <strong>Koh Lanta</strong>
             </div>
             <div class="name-ent">
-                <span>Entreprise</span>
+                <br />
             </div>
             <div class="present">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. In cursus viverra ligula, sed porttitor metus tempus ut. Proin lobortis quis ex ac luctus. Vivamus eu blandit risus. Suspendisse suscipit purus quis tellus eleifend consequat. In sagittis sapien augue, euismod lacinia ligula iaculis at. Etiam non metus quis ipsum cursus viverra vel at enim. Suspendisse id urna tortor. Cras eu quam vel orci consequat elementum.
+                Des candidats échouent sur une île déserte pour y survivre dans les conditions de rescapés. Séparés en deux équipes, et pourvus du minimum vital, ils devront cohabiter pour assurer leur survie mais aussi triompher des épreuves.
             </div>
             <div class="flex-container footer-box">
                 <span>18 / 11 / 2019</span>
@@ -65,13 +65,13 @@
         </div>
         <div class="box">
             <div class="name-box">
-                TEST2
+                <strong>Photos de mode</strong>
             </div>
             <div class="name-ent">
-                <span>Entreprise</span>
+                <br />
             </div>
             <div class="present">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. In cursus viverra ligula, sed porttitor metus tempus ut. Proin lobortis quis ex ac luctus. Vivamus eu blandit risus. Suspendisse suscipit purus quis tellus eleifend consequat. In sagittis sapien augue, euismod lacinia ligula iaculis at. Etiam non metus quis ipsum cursus viverra vel at enim. Suspendisse id urna tortor. Cras eu quam vel orci consequat elementum.
+                La photographie de mode désigne un genre de la photographie consacré aux vêtements et aux styles vestimentaires, parfois composés de pièces de haute couture, portées par des mannequins et réalisé par des photographes de mode
             </div>
             <div class="flex-container footer-box">
                 <span>18 / 11 / 2019</span>
@@ -80,13 +80,13 @@
         </div>
         <div class="box">
             <div class="name-box">
-                TEST3
+                <strong>Des Chiffres et des Lettres</strong>
             </div>
             <div class="name-ent">
-                <span>Entreprise</span>
+                <br />
             </div>
             <div class="present">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. In cursus viverra ligula, sed porttitor metus tempus ut. Proin lobortis quis ex ac luctus. Vivamus eu blandit risus. Suspendisse suscipit purus quis tellus eleifend consequat. In sagittis sapien augue, euismod lacinia ligula iaculis at. Etiam non metus quis ipsum cursus viverra vel at enim. Suspendisse id urna tortor. Cras eu quam vel orci consequat elementum.
+                Jeu reposant sur les compétences en calcul et sur la connaissance du vocabulaire des candidats. Apparu le 19 septembre 1965, c'est le plus ancien jeu télévisé quotidien toujours diffusé de la télévision française.
             </div>
             <div class="flex-container footer-box">
                 <span>18 / 11 / 2019</span>
