--- a/Trululu.web/Views/Shared/_Layout.cshtml
+++ b/Trululu.web/Views/Shared/_Layout.cshtml
@@ -23,7 +23,7 @@
                         <div class="circle"></div>
                         <a asp-controller="Casting" asp-action="Index">Nos castings</a>
                         <div class="circle"></div>
-                        <a asp-controller="Contact" asp-action="Index">Contact</a>
+                        <a asp-controller="Home" asp-action="Feedback">Contact</a>
                     </div>
                     <div class="link-space-member">
                         <a asp-controller="Security" asp-action="SignUp">S'inscrire</a>
