--- a/Trululu.web/Views/Security/SignIn.cshtml
+++ b/Trululu.web/Views/Security/SignIn.cshtml
@@ -15,12 +15,12 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>           
             <div class="box-icon-input box-top">
                 <div class="icon-input"><i class="far fa-user"></i></div>
-                <input asp-for="Mail" placeholder="Adresse Email"/>
+                <input asp-for="Mail" placeholder="Adresse Email" type="email"/>
             </div>
             <span asp-validation-for="Mail" class="text-danger"></span>
             <div class="box-icon-input">
                 <div class="icon-input"><i class="fas fa-lock"></i></div>
-                <input asp-for="Password" placeholder="Mot de passe"/>
+                <input asp-for="Password" placeholder="Mot de passe" type="password"/>
             </div>
                 <span asp-validation-for="Password" class="text-danger"></span>
             <div class="form-submit">
