--- a/Trululu.web/Views/Security/SignUp.cshtml
+++ b/Trululu.web/Views/Security/SignUp.cshtml
@@ -34,7 +34,7 @@
                     <div class="col-md-6">
                         <div class="box-icon-input box-top">
                             <div class="icon-input"><i class="fas fa-id-card"></i></div>
-                            <input asp-for="Mail" placeholder="Adresse email"/>
+                            <input asp-for="Mail" placeholder="Adresse email" type="email"/>
                             <span asp-validation-for="Mail" class="text-danger"></span>
                         </div>
                     </div>
@@ -69,7 +69,7 @@
                     <div class="col-md-12">
                         <div class="box-icon-input box-top">
                             <div class="icon-input"><i class="fas fa-lock"></i></div>
-                            <input asp-for="Password" placeholder="Mot de passe"/>
+                            <input asp-for="Password" placeholder="Mot de passe" type="password"/>
                             <span asp-validation-for="Password" class="text-danger"></span>
                         </div>
                     </div>
